Make header fade in & fix thoughts list on small screens

--- a/src/app/prose.scss
+++ b/src/app/prose.scss
@@ -91,36 +91,45 @@ h2 {
 }
 
 @media not (prefers-reduced-motion) {
-  .slide-enter-content > *:not(.page-title, .post-date, .image-lightbox) {
+  .slide-enter-content > *:not(.image-lightbox) {
     --enter-stage: 0;
     --enter-step: 150ms;
-    --enter-initial: -300ms;
+    --enter-initial: 150ms; // Delay before the animation starts
+    --acceleration: 3ms;
+    animation: slide-enter 1.5s both 1 ease;
+    animation-delay: calc(var(--enter-initial) + var(--enter-stage) * var(--enter-step) - var(--enter-stage) * var(--enter-stage) * var(--acceleration));
+  }
+
+  .nested-slide-enter-content > *:not(.image-lightbox) {
+    --enter-stage: 0;
+    --enter-step: 150ms;
+    --enter-initial: 0ms; // Delay before the animation starts
     --acceleration: 3ms;
     animation: slide-enter 1.5s both 1 ease;
     animation-delay: calc(var(--enter-initial) + var(--enter-stage) * var(--enter-step) - var(--enter-stage) * var(--enter-stage) * var(--acceleration));
   }
 
   // pain
-  .slide-enter-content > *:nth-child(1) { --enter-stage: 1; }
-  .slide-enter-content > *:nth-child(2) { --enter-stage: 2; }
-  .slide-enter-content > *:nth-child(3) { --enter-stage: 3; }
-  .slide-enter-content > *:nth-child(4) { --enter-stage: 4; }
-  .slide-enter-content > *:nth-child(5) { --enter-stage: 5; }
-  .slide-enter-content > *:nth-child(6) { --enter-stage: 6; }
-  .slide-enter-content > *:nth-child(7) { --enter-stage: 7; }
-  .slide-enter-content > *:nth-child(8) { --enter-stage: 8; }
-  .slide-enter-content > *:nth-child(9) { --enter-stage: 9; }
-  .slide-enter-content > *:nth-child(10) { --enter-stage: 10; }
-  .slide-enter-content > *:nth-child(11) { --enter-stage: 11; }
-  .slide-enter-content > *:nth-child(12) { --enter-stage: 12; }
-  .slide-enter-content > *:nth-child(13) { --enter-stage: 13; }
-  .slide-enter-content > *:nth-child(14) { --enter-stage: 14; }
-  .slide-enter-content > *:nth-child(15) { --enter-stage: 15; }
-  .slide-enter-content > *:nth-child(16) { --enter-stage: 16; }
-  .slide-enter-content > *:nth-child(17) { --enter-stage: 17; }
-  .slide-enter-content > *:nth-child(18) { --enter-stage: 18; }
-  .slide-enter-content > *:nth-child(19) { --enter-stage: 19; }
-  .slide-enter-content > *:nth-child(20) { --enter-stage: 20; }
+  .slide-enter-content :nth-child(1) , .nested-slide-enter-content :nth-child(1) { --enter-stage: 1; }
+  .slide-enter-content :nth-child(2) , .nested-slide-enter-content :nth-child(2) { --enter-stage: 2; }
+  .slide-enter-content :nth-child(3) , .nested-slide-enter-content :nth-child(3) { --enter-stage: 3; }
+  .slide-enter-content :nth-child(4) , .nested-slide-enter-content :nth-child(4) { --enter-stage: 4; }
+  .slide-enter-content :nth-child(5) , .nested-slide-enter-content :nth-child(5) { --enter-stage: 5; }
+  .slide-enter-content :nth-child(6) , .nested-slide-enter-content :nth-child(6) { --enter-stage: 6; }
+  .slide-enter-content :nth-child(7) , .nested-slide-enter-content :nth-child(7) { --enter-stage: 7; }
+  .slide-enter-content :nth-child(8) , .nested-slide-enter-content :nth-child(8) { --enter-stage: 8; }
+  .slide-enter-content :nth-child(9) , .nested-slide-enter-content :nth-child(9) { --enter-stage: 9; }
+  .slide-enter-content :nth-child(10) , .nested-slide-enter-content :nth-child(10) { --enter-stage: 10; }
+  .slide-enter-content :nth-child(11) , .nested-slide-enter-content :nth-child(11) { --enter-stage: 11; }
+  .slide-enter-content :nth-child(12) , .nested-slide-enter-content :nth-child(12) { --enter-stage: 12; }
+  .slide-enter-content :nth-child(13) , .nested-slide-enter-content :nth-child(13) { --enter-stage: 13; }
+  .slide-enter-content :nth-child(14) , .nested-slide-enter-content :nth-child(14) { --enter-stage: 14; }
+  .slide-enter-content :nth-child(15) , .nested-slide-enter-content :nth-child(15) { --enter-stage: 15; }
+  .slide-enter-content :nth-child(16) , .nested-slide-enter-content :nth-child(16) { --enter-stage: 16; }
+  .slide-enter-content :nth-child(17) , .nested-slide-enter-content :nth-child(17) { --enter-stage: 17; }
+  .slide-enter-content :nth-child(18) , .nested-slide-enter-content :nth-child(18) { --enter-stage: 18; }
+  .slide-enter-content :nth-child(19) , .nested-slide-enter-content :nth-child(19) { --enter-stage: 19; }
+  .slide-enter-content :nth-child(20) , .nested-slide-enter-content :nth-child(20) { --enter-stage: 20; }
 }
 
 .thoughts-list {
@@ -151,4 +160,12 @@ h2 {
   transform: translate(0, 4px);
   white-space: nowrap;
   padding-inline-end: 0.8rem;
+}
+
+@media (max-width: 700px) {
+  .thoughts-list-item-date {
+    position: unset;
+    display: block;
+    transform: translate(-5px, 4px);
+  }
 }
